--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,12 +1,49 @@
-
-/* 
+/*
     Created on : 25 sep 2023, 02:58:36
     Author     : NaatieOdd
 */
-
-body {
-    background-color: blue;
+* {
+    margin: 0;
+    background-color: #3500D3;
+    color: white;
 }
-h1 {
-    color: red;
+
+.titelnav {
+    display: flex;
+    flex-direction: row;
+}
+
+.navbar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    background-color: #282828;
+    padding: 1%;
+}
+
+#zoekbalkheader {
+    padding-right: 35%;
+    background-color: #282828;
+}
+
+input {
+    background-color: #0C0032;
+    border-radius: 25px;
+    width: 240%;
+}
+
+.link {
+    padding-right: 2%;
+    padding-left: 2%;
+    background-color: #282828;
+}
+
+.link > a {
+    background-color: #282828;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
